# media_parser

./: CMakeLists.txt  codeupnumber1.json  form.cpp  form.h  form.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Test/: nust_misis.json  proglib.json
dlls/: CMakeLists.txt  vk-parser.cpp  vk-parser.h
